--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Curso basico de POO en JS</title>
 </head>
 <body>
-    <script src="./main2.js"></script>
+    <script src="./main2.js" ></script>
+    <!-- <script type="module">       
+    </script> -->
 </body>
 </html>
